# gesture-recognition

./: CMakeLists.txt  README.md  index.html
app/LUA/: demoRec_fsm.lua  demoRec_funcs.lua  demoRec_main.lua  demoRec_root_fsm.lua  verbalInteraction.txt
app/conf/: SVMModels.ini  SVMModels_Hard.ini  actions.ini  actionsSim.ini  actionsStereo.ini  actionsStereoSim.ini  config.ini  gestureRecognition.ini  gestureRecognitionStereo.ini
app/scripts/: demoGestureRecognition.xml.template  demoGestureRecognitionDependencies.xml.template  demoGestureRecognitionStereo.xml.template  gestureRecognition.xml.template
doxygen/: generate.txt
doxygen/doc/html/: DictionaryLearning_8cpp_source.html  DictionaryLearning_8h_source.html  HOGThread_8cpp_source.html  HOGThread_8h_source.html  ModelSVM_8cpp_source.html  ModelSVM_8h_source.html  Model_8h_source.html  dir_06265479e56f761e0855869dd6e89084.html  dir_0e0390d27a36b7f0a9ce7674b03f79de.html  dir_27fe6ddc77f593fa3b6ef68b2771090c.html  dir_7d1c1aaa6385382938b5f186ad4a2548.html  dir_7de0f760b6eca6d8490b1cd27afb5fd6.html  dir_86ec72d1bafc15d2419bee14420e5b1c.html  dir_ad938db00ba76dbf32aea15f568f9dcf.html  dir_b34834f0f303ffa57aa0dd21539a75c5.html  dir_ba814aee3f33baeeb8caf2ca6dbac900.html  dir_dafc222b7ebeac17c22188d4c0937f47.html  dir_e05d7e2b1ecd646af5bb94391405f3b5.html  dir_f9bbb19064e632a642aca4d9e57751d6.html  files.html  game_2actionPerformer_2src_2main_8cpp_source.html  game_2gameManager_2src_2main_8cpp_source.html  gestureRecognitionStereo_2src_2main_8cpp_source.html  gestureRecognitionStereo_8cpp_source.html  gestureRecognitionStereo_8h_source.html  gestureRecognition_2src_2main_8cpp_source.html  gestureRecognition_8cpp_source.html  gestureRecognition_8h_source.html  group__actionPerformer.html  group__gameManager.html  group__gestureRecognition.html  group__gestureRecognitionStereo.html  include_2Recognizer_8h_source.html  index.html  modules.html  sceneFlowThread_8cpp_source.html  sceneFlowThread_8h_source.html  src_2Recognizer_8cpp_source.html  tereo_2include_2Recognizer_8h_source.html  tereo_2src_2Recognizer_8cpp_source.html
doxygen/doc/html/search/: all_0.js  all_1.js  searchdata.js
doxygen/doc/latex/: dir_06265479e56f761e0855869dd6e89084.tex  dir_0e0390d27a36b7f0a9ce7674b03f79de.tex  dir_27fe6ddc77f593fa3b6ef68b2771090c.tex  dir_7d1c1aaa6385382938b5f186ad4a2548.tex  dir_7de0f760b6eca6d8490b1cd27afb5fd6.tex  dir_86ec72d1bafc15d2419bee14420e5b1c.tex  dir_ad938db00ba76dbf32aea15f568f9dcf.tex  dir_b34834f0f303ffa57aa0dd21539a75c5.tex  dir_ba814aee3f33baeeb8caf2ca6dbac900.tex  dir_dafc222b7ebeac17c22188d4c0937f47.tex  dir_e05d7e2b1ecd646af5bb94391405f3b5.tex  dir_f9bbb19064e632a642aca4d9e57751d6.tex  group__actionPerformer.tex  group__gameManager.tex  group__gestureRecognition.tex  group__gestureRecognitionStereo.tex  modules.tex  refman.tex
modules/: CMakeLists.txt
modules/game/actionPerformer/: CMakeLists.txt
modules/game/actionPerformer/src/: main.cpp
modules/game/gameManager/: CMakeLists.txt
modules/game/gameManager/src/: main.cpp
modules/game/gestureRecognitionActionPerformer/: CMakeLists.txt
modules/game/gestureRecognitionActionPerformer/src/: main.cpp
modules/game/gestureRecognitionGameManager/: CMakeLists.txt
modules/game/gestureRecognitionGameManager/src/: main.cpp
modules/gestureRecognition/: CMakeLists.txt
modules/gestureRecognition/include/: DictionaryLearning.h  Model.h  ModelSVM.h  Recognizer.h  gestureRecognition.h
modules/gestureRecognition/src/: DictionaryLearning.cpp  ModelSVM.cpp  Recognizer.cpp  gestureRecognition.cpp  main.cpp
modules/gestureRecognitionStereo/: CMakeLists.txt
modules/gestureRecognitionStereo/include/: DictionaryLearning.h  HOGThread.h  Recognizer.h  gestureRecognition.h  gestureRecognitionStereo.h  sceneFlowThread.h
modules/gestureRecognitionStereo/src/: DictionaryLearning.cpp  HOGThread.cpp  Recognizer.cpp  gestureRecognition.cpp  gestureRecognitionStereo.cpp  main.cpp  sceneFlowThread.cpp
