# Copyright: (C) 2014 iCub Facility - Istituto Italiano di Tecnologia
# Authors: Ilaria Gori
# CopyPolicy: Released under the terms of the GNU GPL v2.0.

add_subdirectory(gestureRecognition)
add_subdirectory(game/gestureRecognitionActionPerformer)
add_subdirectory(game/gestureRecognitionGameManager)
